infra/k8s-apl/be/base/service.yml
#################################
# Service (BE Application Server)
#################################
apiVersion: v1
kind: Service
metadata:
  name: be-ap-svc
  namespace: dummy
  labels:
    app: be-ap-svc
spec:
  ports:
  - name: be-ap-port
    port: 9011
    targetPort: 9011
    protocol: TCP
  selector:
    app: be-ap
